--- a/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
+    <script src="jQuery/jQuery.js"></script>
     <title>Nueva Materia</title>
 </head>
 
@@ -114,6 +115,14 @@
                                     <option value="2019">2019</option>
                                     <option value="2020">2020</option>
                                 </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-3">Año: </div>
+                        <div class="col-sm-9">
+                            <div class="form-group">
+                                <input class="form-control" type="date" id="yearPicker">
                             </div>
                         </div>
                     </div>
