--- a/src/main/resources/templates/Administrador/displayUsuarios.html
+++ b/src/main/resources/templates/Administrador/displayUsuarios.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mb-0 h1" href="#">
+    <a class="navbar-brand mb-0 h1" th:href="@{/admin/index}">
         <img src="../../static/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
         Proyecto Capas
     </a>
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" th:href="@{/admin/index}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Centros Escolares</a>
+                <a class="nav-link" th:href="@{/admin/Escuelas}">Centros Escolares</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Materias </a>
+                <a class="nav-link" th:href="@{/admin/Materias}">Materias </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Usuarios</a>
+                <a class="nav-link active" th:href="@{/admin/Usuarios}">Usuarios</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -92,8 +92,8 @@
                     <th th:text="${usuario.fechaBD}"/>
                     <th/>
                     <th th:text="${usuario.direccion}"/>
-                    <th th:text="${usuario.estado} ? 'Activa' : 'No activa'"/>
-                    <th th:text="${usuario.isAdmin()}? 'Admin' : 'Coordinador'"/>
+                    <th th:text="${usuario.estado} ? 'Activo' : 'No activo'"/>
+                    <th th:text="${usuario.isAdmin()}? 'Administrador' : 'Coordinador'"/>
                 </tr>
             </th:block>
             </tbody>
