--- a/src/main/resources/templates/Autenticacion/Login.html
+++ b/src/main/resources/templates/Autenticacion/Login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
