--- a/src/main/resources/templates/Coordinador/BuscarExpediente.html
+++ b/src/main/resources/templates/Coordinador/BuscarExpediente.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mb-0 h1" href="#">
+    <a class="navbar-brand mb-0 h1" th:href="@{/coordinador/index}">
         <img src="../../static/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
         Proyecto Capas
     </a>
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" th:href="@{/coordinador/index}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">Expediente de Alumnos</a>
+                <a class="nav-link active" th:href="@{/coordinador/filtrar}">Expediente de Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Información de materias </a>
+                <a class="nav-link" th:href="@{/coordinador/index}">Información de materias </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,7 +59,7 @@
 
             <div class="card-body col-md-7">
                 <form method="post" th:action="@{/coordinador/post/filtrarExpedientes}" target="_blank">
-                    <input type="button" class="btn btn-secondary mb-4" value="Regresar" onclick="location.href='./displayEscuelas'" />
+                    <input type="button" class="btn btn-secondary mb-4" value="Regresar" th:href="@{/coordinador/index}" />
                     <div class="form-group row">
                         <div class="col-sm-3">Buscar Alumno Por: </div>
                         <div class="col-sm-6">
