--- a/src/main/resources/templates/Coordinador/editExpediente.html
+++ b/src/main/resources/templates/Coordinador/editExpediente.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mb-0 h1" href="#">
+    <a class="navbar-brand mb-0 h1" th:href="@{/coordinador/index}">
         <img src="../../static/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
         Proyecto Capas
     </a>
@@ -26,13 +26,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link active" th:href="@{/coordinador/index}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Expediente de Alumnos</a>
+                <a class="nav-link" th:href="@{/coordinador/filtrar}">Expediente de Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Información de materias </a>
+                <a class="nav-link" th:href="@{/coordinador/index}">Información de materias </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -146,11 +146,11 @@
                         <i class="fas fa-save"></i>
                         Guardar
                     </button>
-                    <button type="button" class="btn btn-danger mr-4" th:if="${flag}" class="btn btn-info" th:href="@{/coordinador/editExpediente}">
+                    <button type="reset" class="btn btn-danger mr-4" th:if="${flag}" th:href="@{/coordinador/editExpediente}">
                         <i class="fas fa-trash-alt"></i>
                         Limpiar
                     </button>
-                    <button type="button" class="btn btn-secondary" th:href="@{/coordinador/inicio}">
+                    <button type="button" class="btn btn-secondary" th:href="@{/coordinador/index}">
                         Regresar
                     </button>
                 </form>
