--- a/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/nuevaMateriaCursada.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-sm-3">Año: </div>
+                        <div class="col-sm-3">Año prueba Jquery: </div>
                         <div class="col-sm-9">
                             <div class="form-group">
                                 <input class="form-control" type="date" id="yearPicker">
