--- a/src/main/resources/templates/Autenticacion/Login.html
+++ b/src/main/resources/templates/Autenticacion/Login.html
@@ -17,7 +17,7 @@
   <div class="h-100 d-flex flex-column justify-content-center align-items-center">
     <div class="card" style="width: 400px">
       <div class="card-body">
-        <form th:action="@{/login}" class="form-signin" method="post">
+        <form th:action="@{/menu}" class="form-signin" method="post">
           <div class="text-center mb-4">
             <h1 class="h3 mb-4 font-weight-normal">Iniciar Sesión</h1>
           </div>
