--- a/src/main/resources/templates/Coordinador/editMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/editMateriaCursada.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
     <script src="jQuery/jQuery.js"></script>
-    <title>Nueva Materia</title>
+    <title>Editar Materia</title>
 </head>
 
 <body>
@@ -48,20 +48,20 @@
 </nav>
 <div class="d-flex ml-5 mb-2 mt-2">
     <img src="../../static/img/personalRecord128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
-    <h1 class="mt-4 ml-2 mb-4" th:text="${expediente.nombre}+' '+${expediente.apellido}"></h1>
+    <h1>Editar materia existente</h1>
 </div>
 <div class="container-fluid mt-4">
     <div class="d-flex flex-column">
         <div class="card mb-3">
             <div class="card-header">
                 <i class="fas fa-pencil-alt"></i>
-                Agregar Materia
+                Editar Materia
             </div>
 
             <div class="card-body col-md-6">
-                <form th:action="@{/coordinador/post/nueva/Materia}" th:object="${modelo}" method="post">
-                    <input hidden th:field="*{idexpediente}">
+                <form th:action="@{/coordinador/post/edit/Materia}" th:object="${modelo}" method="post">
 
+                    <input hidden th:field="*{id}">
                     <div class="form-group row">
                         <div class="col-sm-3">Materia: </div>
                         <div class="col-sm-9">
@@ -89,7 +89,7 @@
                         <div class="col-sm-3">Nota: </div>
                         <div class="col-sm-9">
                             <div class="form-group">
-                                <input type="number" step="0.1" max="10" min="0" class="form-control" th:field="*{nota}" th:placeholder="7.1" >
+                                <input type="number" class="form-control" step="0.1" max="10" min="0" th:field="*{nota}" th:placeholder="7.1" >
                             </div>
                         </div>
                     </div>
