imgs routes fixed

--- a/src/main/resources/templates/Administrador/index.html
+++ b/src/main/resources/templates/Administrador/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand mb-0 h1" th:href="@{/admin/index}">
-            <img src="../../static/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
+            <img src="/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
             Proyecto Capas
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="card text-center mb-4" style="width: 25rem;">
                 <div class="card-body">
-                    <img src="../../static/img/school128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
+                    <img src="/img/school128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
                     <h5 class="card-title mt-3">Centros Escolares</h5>
                     <p class="card-text">Aquí puedes acceder a todo lo relacionado a los centros escolares</p>
                     <a th:href="@{/admin/Escuelas}" class="btn btn-lg btn-primary btn-block">Ver Centros Escolares</a>
@@ -60,7 +60,7 @@
             </div>
             <div class="card text-center mb-4" style="width: 25rem;">
                 <div class="card-body">
-                    <img src="../../static/img/subjects128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
+                    <img src="/img/subjects128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
                     <h5 class="card-title mt-3">Materias</h5>
                     <p class="card-text">Aquí puedes acceder a todo lo relacionado a las materias</p>
                     <a th:href="@{/admin/Materias}" class="btn btn-lg btn-primary btn-block">Ver Materias</a>
@@ -68,7 +68,7 @@
             </div>
             <div class="card text-center mb-4" style="width: 25rem;">
                 <div class="card-body">
-                    <img src="../../static/img/users128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
+                    <img src="/img/users128.png" alt="Imagen escuela" style="width: 75px; height: 75px">
                     <h5 class="card-title mt-3">Usuarios del sistema</h5>
                     <p class="card-text">Aquí puedes acceder a todo lo relacionado a los usuarios del sistema</p>
                     <a th:href="@{/admin/Usuarios}" class="btn btn-lg btn-primary btn-block">Ver Usuarios del Sistema</a>
