--- a/src/main/resources/templates/Coordinador/BuscarExpediente.html
+++ b/src/main/resources/templates/Coordinador/BuscarExpediente.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand mb-0 h1" th:href="@{/coordinador/index}">
-        <img src="../../static/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
+        <img src="/img/logo.png" width="32" height="32" class="d-inline-block align-top mr-2" alt="">
         Proyecto Capas
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
 </nav>
 
 <div class="d-flex ml-5 mb-2 mt-2">
-    <img src="../../static/img/student128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
+    <img src="/img/student128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
     <h1 class="mt-4 ml-2 mb-4">Expediente de Alumno - Pantalla Inicial</h1>
 </div>
 
