Smallfix: Display edad en lista de Usuarios

--- a/src/main/resources/templates/Administrador/displayUsuarios.html
+++ b/src/main/resources/templates/Administrador/displayUsuarios.html
@@ -90,7 +90,7 @@
                     <th th:text="${usuario.municipio.nombreMunicipio}"/>
                     <th th:text="${usuario.municipio.departamento.nombreDepartamento}"/>
                     <th th:text="${usuario.fechaBD}"/>
-                    <th/>
+                    <th th:text="${usuario.edad}"/>
                     <th th:text="${usuario.direccion}"/>
                     <th th:text="${usuario.estado} ? 'Activo' : 'No activo'"/>
                     <th th:text="${usuario.isAdmin()}? 'Administrador' : 'Coordinador'"/>
