--- a/src/main/resources/templates/Autenticacion/Login.html
+++ b/src/main/resources/templates/Autenticacion/Login.html
@@ -17,22 +17,22 @@
   <div class="h-100 d-flex flex-column justify-content-center align-items-center">
     <div class="card" style="width: 400px">
       <div class="card-body">
-        <form th:action="@{/menu}" class="form-signin" method="post">
+        <form th:action="@{/menu}" class="form-signin" method="post" th:object="${usuario}">
           <div class="text-center mb-4">
             <h1 class="h3 mb-4 font-weight-normal">Iniciar Sesión</h1>
           </div>
 
           <div class="form-label-group">
-            <input type="text" id="inputEmail" class="form-control" placeholder="Usuario" name = "username" required>
-            <label for="inputEmail">
+            <input type="text" id="username" class="form-control" placeholder="Usuario" name = "username" required th:field="*{nombreUsuario}">
+            <label for="username">
               <i class="fa fa-user" aria-hidden="true"></i>
               Usuario
             </label>
           </div>
 
           <div class="form-label-group">
-            <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" name = "password" required>
-            <label for="inputPassword">
+            <input type="password" id="password" class="form-control" placeholder="Contraseña" name = "password" required th:field="*{contrasennia}">
+            <label for="password">
               <i class="fa fa-lock" aria-hidden="true"></i>
               Contraseña
             </label>
@@ -41,8 +41,11 @@
           <p class="mt-4 text-center">¿No tienes una cuenta? <span><a href="/form">Registrate</a></span></p>
           <p class="mt-4 mb-1 text-muted text-center">&copy; Proyecto Capas 2020</p>
         </form>
-        <div th:if="${param.error}" class="alert alert-danger" role="alert">
+        <div th:if="${error}" class="alert alert-danger" role="alert">
         	Invalid username or password
+        </div>
+        <div th:if="${error2}" class="alert alert-danger" role="alert">
+          La cuenta esta deshabilitada, ponerse en contacto con el admin
         </div>
         <div th:if="${param.logout}" class="alert alert-success" role="alert">
         	You have been logged out.
