Cerrar sesion y mensaje de bienvenida custom

--- a/src/main/resources/templates/Administrador/index.html
+++ b/src/main/resources/templates/Administrador/index.html
@@ -46,7 +46,7 @@
         </div>
     </nav>
 
-    <h1 class="mt-4 ml-5 mb-5">¡Bienvenido, administrador!</h1>
+    <h1 class="mt-4 ml-5 mb-5" th:text="'¡Bienvenido, '+${adminName}"></h1>
 
     <div class="container-fluid">
         <div class="d-flex flex-column justify-content-center align-items-center">
