Rutas de boton de navbar

--- a/src/main/resources/templates/Coordinador/index.html
+++ b/src/main/resources/templates/Coordinador/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" th:href="@{/coordinador/filtrar}">Expediente de Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/coordinador/index}">Información de materias </a>
+                <a class="nav-link" th:href="@{/coordinador/materiascursadas}">Información de materias </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
