--- a/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
+++ b/src/main/resources/templates/Coordinador/displayExpedienteFiltrado.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" th:href="@{/coordinador/filtrar}">Expediente de Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/coordinador/index}">Información de materias </a>
+                <a class="nav-link" th:href="@{/coordinador/materiascursadas}">Información de materias </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +47,7 @@
 </nav>
 <div class="d-flex ml-5 mb-2 mt-2">
     <img src="/img/record128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
-    <h1 class="mt-4 ml-2 mb-4">Expedientes filtrados</h1>
+    <h1 class="mt-4 ml-2 mb-4" th:text="${titulo}"></h1>
 </div>
 <div class="container-fluid">
     <div class="d-flex flex-column justify-content-center align-items-center">
