--- a/src/main/resources/templates/Coordinador/editMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/editMateriaCursada.html
@@ -26,13 +26,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" th:href="@{/coordinador/index}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Expediente de Alumnos</a>
+                <a class="nav-link" th:href="@{/coordinador/filtrar}">Expediente de Alumnos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Información de materias </a>
+                <a class="nav-link" th:href="@{/coordinador/materiascursadas}">Información de materias </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
