--- a/src/main/resources/templates/Administrador/displayEscuelas.html
+++ b/src/main/resources/templates/Administrador/displayEscuelas.html
@@ -42,7 +42,7 @@
                         Perfil
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" data-toggle="modal" data-target="#logoutModal">
-                        <a class="dropdown-item" href="#">Cerrar Sesión</a>
+                        <a class="dropdown-item" href="/cerrarSesion">Cerrar Sesión</a>
                     </div>
                 </li>
             </ul>
