--- a/src/main/resources/templates/Coordinador/editMateriaCursada.html
+++ b/src/main/resources/templates/Coordinador/editMateriaCursada.html
@@ -39,7 +39,7 @@
                     Perfil
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown" data-toggle="modal" data-target="#logoutModal">
-                    <a class="dropdown-item" href="/cerrarSesion">Cerrar Sesión</a>
+                    <a class="dropdown-item">Cerrar Sesión</a>
                 </div>
             </li>
         </ul>
@@ -146,7 +146,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary">Salir</button>
+                <button type="button" class="btn btn-danger" onclick="location.href='/cerrarSesion'">Salir</button>
             </div>
         </div>
     </div>
