more buttons redirects

--- a/src/main/resources/templates/Administrador/displayMaterias.html
+++ b/src/main/resources/templates/Administrador/displayMaterias.html
@@ -52,10 +52,10 @@
     <img src="/img/subjects128.png" width="90" height="90" class="d-inline-block align-top mr-2" alt="">
     <h1 class="mt-4 ml-2 mb-4">Administrar Materias</h1>
 </div>
-<button type="button" class="btn btn-success ml-5 mb-4 mt-2">
+<a type="button" class="btn btn-success ml-5 mb-4 mt-2" href="/admin/editMaterias">
     <i class="fas fa-plus"></i>
     Nueva Materia
-</button>
+</a>
 <div class="container-fluid">
     <div class="d-flex flex-column justify-content-center align-items-center">
         <table class="table table-bordered table-hover">
