--- a/src/main/resources/templates/Administrador/displayUsuarios.html
+++ b/src/main/resources/templates/Administrador/displayUsuarios.html
@@ -52,10 +52,10 @@
     <img src="/img/users128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
     <h1 class="mt-4 ml-2 mb-4">Administrar Usuarios</h1>
 </div>
-<button type="button" class="btn btn-success ml-5 mb-4 mt-2">
+<a type="button" class="btn btn-success ml-5 mb-4 mt-2" href="/admin/editUsuario">
     <i class="fas fa-plus"></i>
     Nuevo Usuario
-</button>
+</a>
 <div class="container-fluid">
     <div class="d-flex flex-column justify-content-center align-items-center">
         <table class="table table-bordered table-hover">
