--- a/src/main/resources/templates/Administrador/editMateria.html
+++ b/src/main/resources/templates/Administrador/editMateria.html
@@ -69,6 +69,7 @@
                         <div class="col-sm-9">
                             <div class="form-group">
                                 <input type="text" class="form-control" th:field="*{materia}" name="materia" placeholder="Materia">
+                                <span th:errors="*{materia}" style=color:#FF0000></span><br>
                             </div>
                         </div>
                     </div>
@@ -77,6 +78,7 @@
                         <div class="col-sm-9">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="des" th:field="*{descripcion}"  placeholder="Descripcion">
+                                <span th:errors="*{descripcion}" style=color:#FF0000></span><br>
                             </div>
                         </div>
                     </div>
