Validaciones para AdminController

--- a/src/main/resources/templates/Administrador/displayEscuelas.html
+++ b/src/main/resources/templates/Administrador/displayEscuelas.html
@@ -52,7 +52,7 @@
         <img src="/img/school128.png" width="90" height="90" class="d-inline-block align-top mr-2" alt="">
         <h1 class="mt-4 ml-2 mb-4">Administrar Centros Escolares</h1>
     </div>
-    <a type="button" class="btn btn-success ml-5 mb-4 mt-2" href="/admin/editEscuela">
+    <a type="button" class="btn btn-success ml-5 mb-4 mt-2" th:href="@{/admin/editEscuela}">
         <i class="fas fa-plus"></i>
         Nuevo Centro Escolar
     </a>
