Mas validaciones y ruta faltante a botone

--- a/src/main/resources/templates/Coordinador/BuscarExpediente.html
+++ b/src/main/resources/templates/Coordinador/BuscarExpediente.html
@@ -85,10 +85,10 @@
                             </button>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success" th:href="@{/coordinador/editExpediente}">
+                    <a  class="btn btn-success" th:href="@{/coordinador/editExpediente}">
                         <i class="fas fa-plus"></i>
                         Agregar Nuevo Expediente
-                    </button>
+                    </a>
                 </form>
             </div>
         </div>
