--- a/src/main/resources/templates/Administrador/editUsuario.html
+++ b/src/main/resources/templates/Administrador/editUsuario.html
@@ -77,7 +77,7 @@
                         <div class="col-sm-3">Contraseña: </div>
                         <div class="col-sm-9">
                             <div class="form-group">
-                                <input type="password" class="form-control" name="constrasennia" th:field="*{contrasennia}"  placeholder="**********">
+                                <input type="text" class="form-control" name="constrasennia" th:field="*{contrasennia}"  placeholder="**********">
                                 <span th:errors="*{contrasennia}" style=color:#FF0000></span><br>
                             </div>
                         </div>
